<resources>
    <string name="app_name">EmailVerificationUsingBack4AppParseServer</string>
    <string name="parse_url">https://parseapi.back4app.com</string>
    <string name="parse_application_id">UyUejqd9CiRN1lOUkNLqoLfSTOlldFgTxLMHX7Rn</string>
    <string name="parse_client_key">a1jZrVWT3h32wuGZj5w6SlPxL28uo9mr270CDHM0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email_id">Enter email id</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="log_in">Log In</string>
</resources>